# Giga-Algebra

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
GUI/build-giga-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  input.txt  input2.txt  ui_mainwindow.h
GUI/build-giga-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp  object_script.giga.Debug
GUI/build-giga-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/release/: object_script.giga.Release
GUI/build-giga-Desktop_Qt_6_6_2_MinGW_64_bit-Release/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
GUI/build-giga-Desktop_Qt_6_6_2_MinGW_64_bit-Release/debug/: object_script.giga.Debug
GUI/sources/: equal.xml  giga.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
generators/: generate_number.cpp  generate_number.h
headers/: IntegerNumber.h  NaturalNumber.h  Overload.h  Polynomial.h  RationalNumber.h  Struct.h  StructPolynomial.h
sources/modules/: IntegerNumber.cpp  NaturalNumber.cpp  Polynomial.cpp  RationalNumber.cpp
sources/overload/: Overload.cpp
sources/struct/: IntegerNumber.cpp  NaturalNumber.cpp  Polynomial.cpp  Struct.cpp  StructPolynomial.cpp
sources/tmp_modules/: P_modules_DIV_PP_P.cpp  all_mdules_P.cpp  all_modules_IN.cpp  all_modules_P.cpp  all_modules_RN.cpp  first_module_NN.cpp  first_module_NN2.cpp  tmp_integer.cpp
tests/: DIV_PP_P_test.cpp  ExampleTest.cpp  IntegerNumberTest.cpp  NaturalNumberTest.cpp  NaturalNumberTest2.cpp  PolynomialTest.cpp  RationalNumber.cpp  RationalNumberTest.cpp
(+1 files in other folders)
